crates/dbt-jinja/minijinja/tests/snapshots/test_parser__parser@if_cond.txt.snap
---
source: fs/sa/crates/dbt-jinja/minijinja/tests/test_parser.rs
description: "{% if expr1 %}\n    branch 1\n{% elif expr2 %}\n    branch 2\n{% elif expr3 %}\n    branch 3\n{% else %}\n    else\n{% endif %}"
input_file: fs/sa/crates/dbt-jinja/minijinja/tests/parser-inputs/if_cond.txt
---
Ok(
    Template {
        children: [
            IfCond {
                expr: Var {
                    id: "expr1",
                } @ 1:7-1:12,
                true_body: [
                    EmitRaw {
                        raw: "\n    branch 1\n",
                    } @ 1:15-3:1,
                ],
                false_body: [
                    IfCond {
                        expr: Var {
                            id: "expr2",
                        } @ 3:9-3:14,
                        true_body: [
                            EmitRaw {
                                raw: "\n    branch 2\n",
                            } @ 3:17-5:1,
                        ],
                        false_body: [
                            IfCond {
                                expr: Var {
                                    id: "expr3",
                                } @ 5:9-5:14,
                                true_body: [
                                    EmitRaw {
                                        raw: "\n    branch 3\n",
                                    } @ 5:17-7:1,
                                ],
                                false_body: [
                                    EmitRaw {
                                        raw: "\n    else\n",
                                    } @ 7:11-9:1,
                                ],
                                start_tag_kind: BlockMid,
                                start_tag_span:  @ 5:1-5:17,
                                else_tag_span: Some(
                                     @ 7:1-7:11,
                                ),
                                end_tag_span:  @ 9:1-9:12,
                            } @ 5:4-9:12,
                        ],
                        start_tag_kind: BlockMid,
                        start_tag_span:  @ 3:1-3:17,
                        else_tag_span: None,
                        end_tag_span:  @ 9:1-9:12,
                    } @ 3:4-9:12,
                ],
                start_tag_kind: BlockStart,
                start_tag_span:  @ 1:1-1:15,
                else_tag_span: None,
                end_tag_span:  @ 9:1-9:12,
            } @ 1:1-9:12,
        ],
    } @ 1:1-9:12,
)
