crates/dbt-jinja/minijinja/tests/snapshots/test_parser__parser@if_cond_else.txt.snap
---
source: fs/sa/crates/dbt-jinja/minijinja/tests/test_parser.rs
description: "{% if expr1 %}\n    branch 1\n{% else %}\n    else\n{% endif %}"
input_file: fs/sa/crates/dbt-jinja/minijinja/tests/parser-inputs/if_cond_else.txt
---
Ok(
    Template {
        children: [
            IfCond {
                expr: Var {
                    id: "expr1",
                } @ 1:7-1:12,
                true_body: [
                    EmitRaw {
                        raw: "\n    branch 1\n",
                    } @ 1:15-3:1,
                ],
                false_body: [
                    EmitRaw {
                        raw: "\n    else\n",
                    } @ 3:11-5:1,
                ],
                start_tag_kind: BlockStart,
                start_tag_span:  @ 1:1-1:15,
                else_tag_span: Some(
                     @ 3:1-3:11,
                ),
                end_tag_span:  @ 5:1-5:12,
            } @ 1:1-5:12,
        ],
    } @ 1:1-5:12,
)
